--- a/src/chatx.csproj
+++ b/src/chatx.csproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <PackageReference Include="Azure.Identity" Version="1.14.0-beta.2" />
     <PackageReference Include="Azure.AI.OpenAI" Version="2.2.0-beta.2" />
+    <PackageReference Include="YamlDotNet" Version="16.3.0" />
   </ItemGroup>
 
   <ItemGroup>
