--- a/src/chatx.csproj
+++ b/src/chatx.csproj
@@ -10,12 +10,30 @@
     <AssemblyVersion>1.0.0</AssemblyVersion>
     <FileVersion>1.0.0</FileVersion>
     <InformationalVersion>1.0.0</InformationalVersion>
+    
+    <!-- NuGet Package Properties -->
+    <PackageId>ChatX</PackageId>
+    <Authors>Rob Chambers</Authors>
+    <Description>AI-powered CLI application for chat-based interaction with AI assistants</Description>
+    <PackageTags>cli;ai;chat;openai;azure;github-copilot</PackageTags>
+    <PackageProjectUrl>https://github.com/robch/chatx</PackageProjectUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    
+    <!-- .NET Tool Configuration -->
+    <PackAsTool>true</PackAsTool>
+    <ToolCommandName>chatx</ToolCommandName>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Azure.Identity" Version="1.14.0-beta.2" />
     <PackageReference Include="Azure.AI.OpenAI" Version="2.2.0-beta.2" />
     <PackageReference Include="YamlDotNet" Version="16.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\README.md" Pack="true" PackagePath="\" />
   </ItemGroup>
 
   <ItemGroup>
