--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,7 @@ on:
 # Limit permissions to minimum required
 permissions:
   contents: read
+  actions: write  # Adding write permission for actions
 
 jobs:
   build:
