--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
         name: .NET Tests
         path: ./TestResults/*.trx
         reporter: dotnet-trx
-        fail-on-error: true
+        fail-on-error: false
     
     - name: Upload build artifacts
       uses: actions/upload-artifact@v4
