fix: update CI workflow to support both main and master branches

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,9 +5,9 @@ on:
     # Run at midnight UTC every day
     - cron: '0 0 * * *'
   push:
-    branches: [ main ]
+    branches: [ main, master ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, master ]
   workflow_dispatch:
     # Allow manual triggering
 
