--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,23 +44,50 @@ jobs:
         sed -i "s/<Version>.*<\/Version>/<Version>${{ env.VERSION }}<\/Version>/" src/chatx.csproj
         sed -i "s/<InformationalVersion>.*<\/InformationalVersion>/<InformationalVersion>${{ env.VERSION }}<\/InformationalVersion>/" src/chatx.csproj
         
-        # Convert version to numeric format for AssemblyVersion and FileVersion
-        # Replace any non-numeric sections with dots to create a valid numeric version
-        NUMERIC_VERSION=$(echo ${{ env.VERSION }} | sed -E 's/[^0-9]+/./g' | sed -E 's/\.+/./g' | sed -E 's/^\.//g' | sed -E 's/\.$//g')
-        echo "NUMERIC_VERSION=$NUMERIC_VERSION" >> $GITHUB_ENV
+        # Extract the major.minor.build parts from the version
+        # For AssemblyVersion and FileVersion, which require valid numeric values
+        MAJOR=$(echo ${{ env.VERSION }} | sed -E 's/^([0-9]+).*/\1/')
+        MINOR=$(echo ${{ env.VERSION }} | sed -E 's/^[0-9]+\.([0-9]+).*/\1/')
+        BUILD=$(echo ${{ env.VERSION }} | sed -E 's/^[0-9]+\.[0-9]+\.([0-9]+).*/\1/')
         
-        # If we don't have 4 parts (major.minor.build.revision), add zeros to make it 4 parts
-        VERSION_PARTS=$(echo $NUMERIC_VERSION | tr '.' '\n' | wc -l)
-        if [ $VERSION_PARTS -eq 1 ]; then
-          NUMERIC_VERSION="$NUMERIC_VERSION.0.0.0"
-        elif [ $VERSION_PARTS -eq 2 ]; then
-          NUMERIC_VERSION="$NUMERIC_VERSION.0.0"
-        elif [ $VERSION_PARTS -eq 3 ]; then
-          NUMERIC_VERSION="$NUMERIC_VERSION.0"
-        elif [ $VERSION_PARTS -gt 4 ]; then
-          # If more than 4 parts, only keep the first 4
-          NUMERIC_VERSION=$(echo $NUMERIC_VERSION | awk -F'.' '{print $1"."$2"."$3"."$4}')
+        # Try to extract a YYYYMMDD date pattern from the version
+        DATE_PART=$(echo ${{ env.VERSION }} | grep -oE '20[0-9]{2}(0[1-9]|1[0-2])(0[1-9]|[12][0-9]|3[01])')
+        
+        if [ -n "$DATE_PART" ]; then
+          echo "Found date in version: $DATE_PART"
+          # Convert YYYYMMDD to day of year
+          # Extract year, month, day
+          YEAR=${DATE_PART:0:4}
+          MONTH=${DATE_PART:4:2}
+          DAY=${DATE_PART:6:2}
+          
+          # Use date command to convert to day of year
+          DAY_OF_YEAR=$(date -d "$YEAR-$MONTH-$DAY" +%j | sed 's/^0*//')
+          echo "Using date from version: $YEAR-$MONTH-$DAY (day of year: $DAY_OF_YEAR)"
+        else
+          echo "No date found in version, using today's date as fallback"
+          DAY_OF_YEAR=$(date '+%j' | sed 's/^0*//')
         fi
+        
+        # Extract final decimal part if it exists (match the last .digit sequence)
+        FINAL_PART=$(echo ${{ env.VERSION }} | grep -oE '\.[0-9]+$' | grep -oE '[0-9]+')
+        if [ -z "$FINAL_PART" ]; then
+          FINAL_PART=0
+        fi
+        
+        # Calculate revision: day_of_year * 100 + final_part
+        REVISION=$((DAY_OF_YEAR * 100 + FINAL_PART))
+        
+        # Safety check: ensure revision doesn't exceed maximum allowed value
+        if [ $REVISION -gt 65535 ]; then
+          echo "WARNING: Revision exceeds maximum allowed value (65535). Capping at 65535."
+          REVISION=65535
+        fi
+        
+        # Combine for a valid .NET version with 4 parts
+        NUMERIC_VERSION="$MAJOR.$MINOR.$BUILD.$REVISION"
+        echo "Using numeric version: $NUMERIC_VERSION for AssemblyVersion and FileVersion"
+        echo "NUMERIC_VERSION=$NUMERIC_VERSION" >> $GITHUB_ENV
         
         echo "Using numeric version: $NUMERIC_VERSION for AssemblyVersion and FileVersion"
         sed -i "s/<AssemblyVersion>.*<\/AssemblyVersion>/<AssemblyVersion>$NUMERIC_VERSION<\/AssemblyVersion>/" src/chatx.csproj
