--- a/website/mkdocs.yml
+++ b/website/mkdocs.yml
@@ -83,6 +83,7 @@ nav:
   - GETTING STARTED:
     - Installation: getting-started.md
   - PROVIDERS:
+    - Overview: providers/index.md
     - OpenAI: providers/openai.md
     - Azure OpenAI: providers/azure-openai.md
     - GitHub Copilot: providers/github-copilot.md
@@ -91,6 +92,9 @@ nav:
     - Chat History: usage/chat-history.md 
     - Configuration: usage/configuration.md
     - External Configuration Files: usage/external-config-files.md
+    - Getting Help: usage/getting-help.md
+    - Input Options: usage/input-options.md
+    - Scopes: usage/scopes.md
     - Working with List Settings: usage/config-list-settings.md
     - Aliases: usage/aliases.md
     - Templates and Variables: usage/templates-and-variables.md
@@ -102,6 +106,8 @@ nav:
     - Project Aliases: tutorials/project-aliases.md
     - Creating User Aliases: tutorials/creating-user-aliases.md
     - GitHub Copilot Authentication: tutorials/github-copilot-auth.md
+    - GitHub Copilot HMAC Auth: tutorials/github-copilot-hmac-auth.md
+    - Help System: tutorials/help-system.md
     - Managing MCP Servers: tutorials/managing-mcp-servers.md
     - Removing MCP Servers: tutorials/removing-mcp-servers.md
     - MCP Command Usage: tutorials/mcp-command-usage.md
@@ -115,35 +121,72 @@ nav:
   - REFERENCE:
     - chatx:
       - reference/cli/index.md
+      - help: reference/cli/help.md
+      - version: reference/cli/version.md
       - Options:
+        - Overview: reference/cli/options/index.md
         - --add-system-prompt: reference/cli/options/add-system-prompt.md
+        - --add-user-prompt: reference/cli/options/add-user-prompt.md
+        - --any: reference/cli/options/any.md
         - --arg: reference/cli/options/arg.md
         - --azure-openai-api-key: reference/cli/options/azure-openai-api-key.md
         - --azure-openai-chat-deployment: reference/cli/options/azure-openai-chat-deployment.md
         - --azure-openai-endpoint: reference/cli/options/azure-openai-endpoint.md
         - --ALIAS: reference/cli/options/alias.md
+        - --chat-history: reference/cli/options/chat-history.md
         - --config: reference/cli/options/config.md
         - --command: reference/cli/options/command.md
+        - --continue: reference/cli/options/continue.md
         - --copilot-api-endpoint: reference/cli/options/copilot-api-endpoint.md
+        - --copilot-hmac-key: reference/cli/options/copilot-hmac-key.md
+        - --copilot-integration-id: reference/cli/options/copilot-integration-id.md
+        - --copilot-model-name: reference/cli/options/copilot-model-name.md
         - --debug: reference/cli/options/debug.md
         - --env: reference/cli/options/env.md
+        - --expand: reference/cli/options/expand.md
         - --foreach: reference/cli/options/foreach.md
-        - --inp: reference/cli/options/inp.md
-        - --quiet: reference/cli/options/quiet.md
+        - --github-token: reference/cli/options/github-token.md
+        - --global: reference/cli/options/global.md
         - --input: reference/cli/options/input.md
+        - --input-chat-history: reference/cli/options/input-chat-history.md
+        - --inp: reference/cli/options/inp.md
+        - --inputs: reference/cli/options/inputs.md
         - --instruction: reference/cli/options/instruction.md
         - --inpu: reference/cli/options/inpu.md
+        - --interactive: reference/cli/options/interactive.md
         - --instructions: reference/cli/options/instructions.md
+        - --local: reference/cli/options/local.md
+        - --no-templates: reference/cli/options/no-templates.md
         - --openai-api-key: reference/cli/options/openai-api-key.md
         - --openai-chat-model-name: reference/cli/options/openai-chat-model-name.md
+        - --output-chat-history: reference/cli/options/output-chat-history.md
+        - --output-trajectory: reference/cli/options/output-trajectory.md
         - --profile: reference/cli/options/profile.md
         - --python-expert: reference/cli/options/python-expert.md
+        - --question: reference/cli/options/question.md
+        - --questions: reference/cli/options/questions.md
+        - --quiet: reference/cli/options/quiet.md
+        - --save-alias: reference/cli/options/save-alias.md
+        - --save-global-alias: reference/cli/options/save-global-alias.md
+        - --save-local-alias: reference/cli/options/save-local-alias.md
         - --save-profile: reference/cli/options/save-profile.md
+        - --save-user-alias: reference/cli/options/save-user-alias.md
+        - --system-prompt: reference/cli/options/system-prompt.md
         - --threads: reference/cli/options/threads.md
+        - --trim-token-target: reference/cli/options/trim-token-target.md
+        - --url: reference/cli/options/url.md
+        - --use-azure: reference/cli/options/use-azure.md
+        - --use-azure-openai: reference/cli/options/use-azure-openai.md
         - --use-copilot: reference/cli/options/use-copilot.md
         - --use-copilot-hmac: reference/cli/options/use-copilot-hmac.md
+        - --use-copilot-token: reference/cli/options/use-copilot-token.md
+        - --use-openai: reference/cli/options/use-openai.md
+        - --use-templates: reference/cli/options/use-templates.md
+        - --user: reference/cli/options/user.md
         - --var: reference/cli/options/var.md
         - --vars: reference/cli/options/vars.md
+        - --verbose: reference/cli/options/verbose.md
+        - --working-dir: reference/cli/options/working-dir.md
       - alias:
         - reference/cli/alias/index.md
         - List: reference/cli/alias/list.md
