--- a/tests/cycod/Tests.csproj
+++ b/tests/cycod/Tests.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\cycod\cycod.csproj" />
+    <ProjectReference Include="..\..\src\cycod\chatx.csproj" />
     <ProjectReference Include="..\..\src\common\common.csproj" />
   </ItemGroup>
 
