--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ src/common/obj/
 src/common/bin/
 src/cycod/obj/
 src/cycod/bin/
+src/cycodmd/bin/
+src/cycodmd/obj/
 src/cycodt/obj/
 src/cycodt/bin/
 
